--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,40 @@
-/* Navbar Styling */ 
+/* BASE STYLE */ 
 
-nav ul {
-	box-sizing: border-box;
-	border: 3px solid;
-	width: 90%;
-	height: 4em;
-	display: block;
+body {
+	font-family: 'Varela Round', sans-serif;
+}
+
+
+/* HEADER */
+
+
+nav {
+
+	margin: 15px 15px 15px 15px;
+}
+
+.col-xs-12 {
+	border: 3px solid black;
 	background-color: #FFB4B0;
+	text-align: left;
+	height: 4em;
+	width: 92%;
 	margin: 1em;
-	padding-top: 10px;
+	background-color: #FFB4B0;
+	padding-top: 1.5px;
 	padding-left: 1em;
 	list-style-type: none;
-	float: auto;
+}
+
+nav ul {
+
 }
 
 nav li {
 	float: left;
-	margin-bottom: 5px;
-	padding: 5px;
+	padding-right: .3em;
 	display: inline-block;
 }
-
-nav li a {}
 
 a:first-child {
 	color: black;
@@ -30,45 +43,138 @@ a:first-child {
 
 /* Body Styling */ 
 
-.body-box {
-	display: inline;
-	box-sizing: border-box;
-	width: 100%;
-}
 
-.filter-bar {
+
+
+/* Filter bar on left of body */
+.col-xs-4 {
+	max-width: 30%;
+	max-height: 100%;
 	border: 3px solid;
+	height: 40em;
 	background-color: #4DD7FA;
-	display: inline;
-	box-sizing: border-box;
-	margin: 1em;
-	height: 30em;
-	float: left;
+	margin: 0 1em 1em 1em;
+	margin-top: 0 !important;
+	padding-top: 1em;
 	padding-left: 1em;
-	width: 25%;
+	padding-bottom: 1em;
+	line-height: 2em;
 }
 
-.songlist-bar {
-	border: 3px solid;
-	background-color: #FEFAC0;
-	display: inline;
-	box-sizing: border-box;
-	height: 30em;
-	width: 65%;
-	margin-top: 1em;
-	margin-right: 1em;
-	margin-left: -1.5em;
-	padding-left: 2em;
+
+input[type="range"] {
+  -webkit-appearance: none;
+  width: 90%;
+  border-radius: 8px;
+  height: 10px;
+  border: 3px solid black;
+  background-color: #fff;
+  margin-top: 1em;
+  margin-bottom: 2em;
+  margin-left: .5em;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 3px solid black;
+  height: 20px;
+  width: 20px;
+  border-radius: 50px;
+  background-color: lightgrey;
+}
+
+#filter-button {
+	border: solid 3px black;
+	background-color: lightgrey;
+	border-radius: 5px;
+	width: 60%;
+	display: block;
+	margin: 0 auto;
+	text-align: center;
+	font-size: 1em;
+	margin-top: 12em;
+}
+
+select {
+	width: 90%;
+	position: center;
+}
+
+#radio-col1 {
+	position: relative;
+	width: 50%;
+	float: left;
+	padding: 5px;
+}
+
+#radio-col2 {
+	position: relative;
+	width: 50%;
 	float: right;
+	padding: 5px;
 }
 
-#song-title {
+#radio-col1,
+#radio-col2 {
+	margin-right;
+	line-height: 2em;
+	text-orientation: 
+}
+
+input[type="checkbox"] {
+    -webkit-appearance: none;
+	background-color: #fafafa;
+	border: 3px solid black;
+	padding: 6px;
+	border-radius: 3px;
+	margin-top: .8em;
+	margin-bottom: 0;
+	margin-right: 8px;
+}
+
+input[type="checkbox"]:checked {
+	background-color: black;
+}
+
+
+input[type="radio"] {
+	margin-right: 8px;
+	border: 5px solid black;
+
+}
+
+label {
+	border-top: 3em;
+}
+
+
+/* Songlist bar on right of body */
+.col-xs-8 {
+	display: inline-block;
+	border: 3px solid black;
+	background-color: #FEFAC0;
+	height: 40em;
+	padding-left: 2em;
+	width: 60%;
+	color: #785616;
+}
+
+ul li {
+	display: inline;
+}
+
+.song-title {
 	font-size: 3px
 	color: #785616;
 }
 
-.songlist-bar li {
+#songlist-bar li {
 	display: inline;
-
+	list-style-type: : none;
 }
 
+.area-container {
+	display: inline-block;
+	flex-direction: row;
+	justify-content: space-between;
+}
