completed instructions for version2

--- a/css/main.css
+++ b/css/main.css
@@ -91,7 +91,7 @@ input[type="range"]::-webkit-slider-thumb {
 	display: block;
 	margin: 0 auto;
 	text-align: center;
-	font-size: 1em;
+	font-size: 1.1em;
 	margin-top: 12em;
 }
 
@@ -154,17 +154,26 @@ label {
 	border: 3px solid black;
 	background-color: #FEFAC0;
 	height: 40em;
-	padding-left: 2em;
+	padding-left: 0em;
 	width: 60%;
 	color: #785616;
+}
+
+#songs {
+	margin-top: 2em;
+	font-size: 1.2em;
 }
 
 ul li {
 	display: inline;
 }
 
-.song-title {
-	font-size: 3px
+#song1,
+#song2,
+#song3,
+#song4,
+#song {
+	font-size: 10px
 	color: #785616;
 }
 
