--- a/css/main.css
+++ b/css/main.css
@@ -8,12 +8,12 @@ nav {
 	margin: 15px 15px 15px 15px;
 }
 
-.col-xs-12 {
+#nav-bar {
 	border: 3px solid black;
 	background-color: #FFB4B0;
 	text-align: left;
 	height: 4em;
-	width: 92.1%;
+	width: 91.9%;
 	margin: 1em;
 	background-color: #FFB4B0;
 	padding-top: 1.5px;
@@ -107,6 +107,11 @@ select {
 	text-orientation: 
 }
 
+#genre-select label {
+	margin-bottom: 0px;
+	line-height: 1px
+}
+
 input[type="checkbox"] {
     -webkit-appearance: none;
 	background-color: #fafafa;
@@ -165,9 +170,67 @@ label {
 	padding-left: 2em;
 }
 
-ul li {
+/* Styling for add and list pages */
+
+ul > li {
 	display: inline;
+	list-style-type: none;
 }
+
+.visible {
+	display: block;
+}
+
+.hidden {
+	display: none;
+}
+
+/* Add Music Page */
+
+col-xs-12 {
+	border: 3px solid gray;
+}
+
+#add-view {
+	display: block;
+	margin-left: 3em;
+}
+
+#add-view-body {
+	display: block;
+	border-radius: 5px;
+	max-width: 75%;
+	padding: 4em;
+	text-align: left;
+}
+
+#add-view-body,
+#add-view-body input,
+#add-view-body label {
+	display: inline-block;
+	margin: 1em;
+}
+
+#add-button {
+	display: block;
+	border: solid 3px black;
+	background-color: lightgrey;
+	border-radius: 5px;
+	height: 2.5em;
+	width: 10em;
+	display: block;
+	margin: 2em 2em 2em 8em;
+	text-align: center;
+	font-size: 1.1em;
+}
+
+input[type="text"] {
+	border: 2px solid lightgrey;
+	border-radius: 1.5px;
+	margin-left: 5em;
+
+}
+
 
 
 
