--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,7 @@ label {
 	margin-top: 1em;
 }
 
-#filter-button {
+#moreButton {
 	border: solid 3px black;
 	background-color: lightgrey;
 	border-radius: 5px;
@@ -156,18 +156,35 @@ label {
 	display: inline-block;
 	border: 3px solid black;
 	background-color: #FEFAC0;
-	height: 35em;
+	height: 100%;
 	padding-left: 0em;
 	width: 60%;
 	color: #785616;
 	line-height: 3em;
 }
 
-#songs {
-	margin-top: 2em;
+.col-sm-2 {
+	margin-right: 2em;
+}
+
+#main {
 	font-size: .9em;
 	margin-left: 0;
-	padding-left: 2em;
+	padding: 2em;
+}
+
+.songInfo {
+	font-size: 1.1em;
+}
+
+hr {
+	color: black !important;
+	border-top: 1px solid gray;
+}
+
+input[type="button"] {
+	border-radius: 5px;
+	float: right;
 }
 
 /* Styling for add and list pages */
