--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,12 @@
 /* BASE STYLE */ 
 body {
 	font-family: 'Varela Round', sans-serif;
+	width: 95% !important;
 }
 
 /* Header-Nav */
 nav {
-	margin: 15px 15px 15px 15px;
+	margin: 20px 15px 15px 20px;
 }
 
 #nav-bar {
@@ -13,17 +14,23 @@ nav {
 	background-color: #FFB4B0;
 	text-align: left;
 	height: 4em;
-	width: 91.9%;
 	margin: 1em;
 	background-color: #FFB4B0;
 	padding-top: 1.5px;
 	list-style-type: none;
+	width: 96%;
+}
+
+#nav-bar a {
+	text-decoration: none;
+	margin: 50% auto 50% auto !important;
 }
 
 .col-xs-12 ul {
 	text-align: left;
 	margin: 0;
 	padding: 0;
+
 }
 
 nav li {
@@ -42,13 +49,16 @@ a:visited {
 /* Begin Body Styling */ 
 /* Filter bar on left of body */
 .col-xs-4 {
-	max-width: 30%;
+	float: left;
+	display: inline-block;
+	width: 30em;
+	max-width: 28%;
 	min-width: 150px;
 	max-height: 100%;
 	border: 3px solid;
 	height: 35em;
 	background-color: #4DD7FA;
-	margin: 0 1em 1em 1em;
+	margin: 1em;
 	margin-top: 0 !important;
 	padding-top: 1em;
 	padding-left: 1em;
@@ -60,6 +70,7 @@ a:visited {
 input[type="range"] {
   -webkit-appearance: none;
   width: 90%;
+  height: 7px !important;
   border-radius: 8px;
   height: 10px;
   border: 3px solid black;
@@ -88,66 +99,59 @@ select {
 }
 
 #radio-col1 {
-	position: relative;
-	width: 50%;
-	float: left;
-	padding: 5px;
+	display: inline-block;
+	width: 40%;
+	padding: 3px;
 }
 
 #radio-col2 {
-	position: relative;
-	width: 50%;
-	float: right;
-	padding: 5px;
+	display: inline-block;
+	width: 40%;
+	padding: 3px;
 }
 
 #radio-col1,
 #radio-col2 {
 	line-height: 2em;
-	text-orientation: 
+	margin: 5px;
 }
 
 #genre-select label {
 	margin-bottom: 0px;
-	line-height: 1px
 }
 
 input[type="checkbox"] {
-    -webkit-appearance: none;
-	background-color: #fafafa;
+	height: 15px;
+	width: 15px;
+	background-color: white;
 	border: 3px solid black;
 	padding: 6px;
-	border-radius: 3px;
-	margin-top: .8em;
-	margin-bottom: 0;
-	margin-right: 8px;
-}
-
-input[type="checkbox"]:checked {
-	background-color: black;
+	border-radius: 5px;
+	margin: .8em 4px 0 4px;
+	text-align: center;
 }
 
 
-input[type="radio"] {
-	margin-right: 8px;
-	border: 5px solid black;
 
+
+#artistSelect,
+#albumSelect {
+	line-height: 50em;
 }
 
-label {
-	margin-top: 1em;
-}
-
-#moreButton {
+#filterButton,
+#moreButton,
+#addButton {
 	border: solid 3px black;
 	background-color: lightgrey;
 	border-radius: 5px;
-	width: 60%;
+	width: 12em;
+	height: 35px;
 	display: block;
 	margin: 0 auto;
 	text-align: center;
 	font-size: 1.1em;
-	margin-top: 9em;
+	margin-top: 10%;
 }
 
 
@@ -158,33 +162,25 @@ label {
 	background-color: #FEFAC0;
 	height: 100%;
 	padding-left: 0em;
-	width: 60%;
+	width: 75em;
+	max-width: 60%;
 	color: #785616;
 	line-height: 3em;
+	margin: 0em !important;
 }
 
 .col-sm-2 {
 	margin-right: 2em;
 }
 
-#main {
+#songContainer {
 	font-size: .9em;
 	margin-left: 0;
 	padding: 2em;
 }
 
-.songInfo {
-	font-size: 1.1em;
-}
-
 hr {
-	color: black !important;
-	border-top: 1px solid gray;
-}
-
-input[type="button"] {
-	border-radius: 5px;
-	float: right;
+	color: lightgrey !important;
 }
 
 /* Styling for add and list pages */
@@ -199,13 +195,14 @@ ul > li {
 }
 
 .hidden {
-	display: none;
+	display: none !important;
 }
 
 /* Add Music Page */
 
-col-xs-12 {
+.col-xs-12 {
 	border: 3px solid gray;
+	width: 100%;
 }
 
 #add-view {
@@ -219,33 +216,63 @@ col-xs-12 {
 	max-width: 75%;
 	padding: 4em;
 	text-align: left;
+	background-color: lightgrey;
 }
 
-#add-view-body,
-#add-view-body input,
-#add-view-body label {
+#addSongForm {
+	border: 3px solid black;
+	border-radius: 5px;
+	background-color: white;
+	text-align: center;
+	display: block;
+	margin: 0 20% 0 20%;
+	position: center;
+	padding: 6em;
+}
+
+#addSongForm label{
+	text-align: left !important;
+}
+
+#add-view-body {
 	display: inline-block;
+}
+
+
+
+#add-view-body input {
+	width: 20em;
+	height:  25px;
 	margin: 1em;
 }
 
-#add-button {
-	display: block;
-	border: solid 3px black;
-	background-color: lightgrey;
-	border-radius: 5px;
-	height: 2.5em;
-	width: 10em;
-	display: block;
-	margin: 2em 2em 2em 8em;
-	text-align: center;
-	font-size: 1.1em;
-}
+
 
 input[type="text"] {
 	border: 2px solid lightgrey;
 	border-radius: 1.5px;
-	margin-left: 5em;
+	width: 75%;
+}
 
+.row {
+	width: 100% !important;
+}
+
+h1 {
+	font-size: 25px;
+}
+
+.delete {
+	height: 30px;
+	width: 80px;
+	margin-left: 10%;
+	margin-right: 30%;
+	display: inline;
+	border-radius: 4px;
+}
+
+.addedSong li {
+	margin: .6em;
 }
 
 
