--- a/sass/main.scss
+++ b/sass/main.scss
@@ -284,3 +284,15 @@ h1 {
 	margin: .7em;
 }
 
+
+.save_edit_btn,
+.save_new_btn {
+	border: 3px solid grey;
+	border-radius: 5px;
+	color: white;
+}
+
+
+
+
+
